# x11perf_wm

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  Xmark  Xmark.man  bitmaps.h  configure.ac  do_arcs.c  do_blt.c  do_complex.c  do_dots.c  do_lines.c  do_movewin.c  do_rects.c  do_segs.c  do_simple.c  do_tests.c  do_text.c  do_traps.c  do_tris.c  do_valgc.c  do_windows.c  x11pcomp.cpp  x11perf.c  x11perf.h  x11perf.man  x11perfcomp.in  x11perfcomp.man
man/: x11perf.man
