
dnl  Copyright 2005 Red Hat, Inc.
dnl 
dnl  Permission to use, copy, modify, distribute, and sell this software and its
dnl  documentation for any purpose is hereby granted without fee, provided that
dnl  the above copyright notice appear in all copies and that both that
dnl  copyright notice and this permission notice appear in supporting
dnl  documentation, and that the name of Red Hat not be used in
dnl  advertising or publicity pertaining to distribution of the software without
dnl  specific, written prior permission.  Red Hat makes no
dnl  representations about the suitability of this software for any purpose.  It
dnl  is provided "as is" without express or implied warranty.
dnl 
dnl  RED HAT DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
dnl  INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO
dnl  EVENT SHALL RED HAT BE LIABLE FOR ANY SPECIAL, INDIRECT OR
dnl  CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE,
dnl  DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
dnl  TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
dnl  PERFORMANCE OF THIS SOFTWARE.
dnl
dnl Process this file with autoconf to create configure.

AC_PREREQ([2.57])
AC_INIT(x11perf,[1.0.1], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg],x11perf)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROG(SED,sed)
if [[ -z $SED ]] ; then
   AC_MSG_ERROR([sed is needed to build x11perf])
fi

AC_TYPE_SIGNAL

# Checks for pkg-config packages
PKG_CHECK_MODULES(X11PERF, x11 xmuu)
AC_SUBST(X11PERF_CFLAGS)
AC_SUBST(X11PERF_LIBS)
PKG_CHECK_MODULES(XRENDER, xrender xft, have_xrender=yes, have_xrender=no)
if test "x$have_xrender" = "xyes"; then
	AC_DEFINE(XRENDER, 1, [Define to 1 if you have xrender and xft])
	X11PERF_CFLAGS="$X11PERF_CFLAGS $XRENDER_CFLAGS"
	X11PERF_LIBS="$X11PERF_LIBS $XRENDER_LIBS"
fi

XORG_MANPAGE_SECTIONS
XORG_RELEASE_VERSION

AC_OUTPUT([Makefile])
